Support for GNS

--- a/src/main/resources/atv.properties
+++ b/src/main/resources/atv.properties
@@ -8,7 +8,7 @@ dnssec_root_key=get-trust-anchor/ksk-as-dnskey.txt
 http_timeout=15
 #
 # PRE CHECKS
-precheck.simpleHTTPCheck.url=https://c01.netztest.at/RMBTControlServer/testRequest
+precheck.simpleHTTPCheck.url=https://ec.europa.eu/digital-building-blocks/DSS/webapp-demo/signature-rest
 #
 # TPL Interpreter config
 tpl_main_predicate=accept(Form).
@@ -19,9 +19,9 @@ tpl_recordRPxTranscript_path=/tmp/lightest_rpx
 ## EidasCertFormat
 trustscheme_claim_default=eIDAS_qualified_claim
 #
-trustscheme_claim.eIDAS_qualified_claim=_scheme._trust.test-scheme.lightest.nlnetlabs.nl.
-trustscheme_claim.eIDAS_qualified=eidas.lightest.nlnetlabs.nl
-trustscheme_claim.eidas_qualified=eidas.lightest.nlnetlabs.nl
+trustscheme_claim.eIDAS_qualified_claim=_scheme._trust.eidas-ca.pof-demo.lightest.nlnetlabs.nl.
+trustscheme_claim.eIDAS_qualified=eidas.pof-demo.lightest.nlnetlabs.nl
+trustscheme_claim.eidas_qualified=eidas.pof-demo.lightest.nlnetlabs.nl
 #
 #  peppol defaults (for certs without claim):
 trustscheme_claim.peppol_sp_qualified_claim=peppol_sp.uprc.lightest.nlnetlabs.nl.
